@@ -1,7 +1,7 @@
 AC_INIT
 AC_CONFIG_SRCDIR([ev_epoll.c])
 
-AM_INIT_AUTOMAKE(libev,3.4)
+AM_INIT_AUTOMAKE(libev,3.41)
 AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
 
